Prachi | #2473 | Fixed spacing issues for services spread over two rows in reports page

--- a/src/main/less/style.less
+++ b/src/main/less/style.less
@@ -1206,6 +1206,7 @@ input[type="checkbox"].dashboard-form-checkbox {
     }
     .service {
         padding-left: 5px;
+        padding-bottom: 5px;
     }
 }
 .selectLanguage a
